--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,6 +14,10 @@ jobs:
       uses: actions/setup-node@v2-beta
       with:
         node-version: '12'
+    - name: Build dist
+       run: |
+            npm run lint
+            npm run dist
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@06e0830ea83eea10ed4a62654eeaedafb8bf50fc
       with: # All of theses inputs are optional
