--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -16,6 +16,7 @@ jobs:
         node-version: '12'
     - name: Build dist
       run: |
+        npm install
         npm run lint
         npm run dist
     - name: Publish if version has been updated
